fixed width and alignment

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@ html, body {
 #root {
     height: 100%;
     width: 100%;
-    max-width: 400px; 
+    max-width: 380px; 
     background-color: #fff;
 }
